--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 JWT_SECRET = nexusAI
+DB_URI = "mongodb+srv://sanskarsahu1704:E57ftRjVYbR5opHM@cluster0.hdsh9.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
