--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.7",
     "pdf-parse": "^1.1.1"
   }
 }
