--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "cookies": "^0.9.1",
     "framer-motion": "^11.12.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
