--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.8",
     "cookies": "^0.9.1",
+    "datetime": "^0.0.3",
     "framer-motion": "^11.12.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
