--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@radix-ui/react-avatar": "^1.1.1",
     "axios": "^1.7.8",
     "cookies": "^0.9.1",
+    "date-fns": "^4.1.0",
     "datetime": "^0.0.3",
     "framer-motion": "^11.12.0",
     "js-cookie": "^3.0.5",
@@ -20,7 +23,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
-    "sonner": "^1.7.0"
+    "sonner": "^1.7.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
