--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.0.1",
     "sonner": "^1.7.0",
     "zod": "^3.23.8"
