--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
+    "multer": "^1.4.5-lts.2",
+    "multer-s3": "^3.0.1",
     "react-hot-toast": "^2.4.1"
   }
 }
